--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@ function updateHiddenAndPlaceholder(baseId) {
             // LIFF 初期化
             if (typeof liff !== 'undefined') {
                 liff.init({
-                    liffId: '2007397643-Mmm64enZ'
+                    liffId: '2005254357-zKma9BZk'
                 }).then(() => {
                     console.log('LIFF初期化成功');
                 }).catch((err) => {
