--- a/index.html
+++ b/index.html
@@ -2485,14 +2485,14 @@
 
         <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
         <div class="symptoms">
-            <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">ベビーケア・育児相談</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">マタニティ整体</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">産後整体</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">おっぱいマッサージ</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">産後ピラティス</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">母子ケア</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">ファミリーケア</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">整体</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">ベビーケア・育児相談 45分</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">マタニティ整体 45分</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">産後整体 45分</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">おっぱいマッサージ 45分</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">産後ピラティス 45分</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">母子ケア 90分</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">ファミリーケア 135分</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">整体 45分</button>
         </div>
 
         <div class="label">希望日時<span class="required">必須</span></div>
@@ -2650,7 +2650,7 @@ function copySummaryForUser() {
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let visitTimes = {
-            '1回目〈30分〉': 30,
+            '1回目〈30分〉': 0,
             '2回目以降〈0分〉': 0
         };
 
@@ -2658,28 +2658,20 @@ function copySummaryForUser() {
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let optiTimes = {
-            '眉カット〈30分〉': 30,
-            '襟足〈30分〉': 30,
-            '背中(キャミソールライン)〈30分〉': 30,
-            '背中(腰まで)〈30分〉': 30,
-            'デコルテ〈30分〉': 30,
-            '腕〈30分〉': 30,
-            '保湿パック〈30分〉': 30,
-            'ベーシックマッサージ〈30分〉': 30,
-            'リラックスマッサージ〈30分〉': 30,
-            '美白パック〈30分〉': 30
+            '美白パック〈30分〉': 0
         };
 
         let selectedoptiTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
-            '和装プラン〈30分〉': 30,
-            '洋装プランA〈60分〉': 60,
-            '洋装プランB〈120分〉': 120,
-            '洋装プランC〈30分〉': 30,
-            'リラックスコース〈60分〉': 60,
-            'ベーシックコース〈30分〉': 30,
-            'スピードコース〈90分〉': 90
+            'ベビーケア・育児相談 45分': 45,
+            'マタニティ整体 45分': 45,
+            '産後整体 45分': 45,
+            'おっぱいマッサージ 45分': 45,
+            '産後ピラティス 45分': 45,
+            '母子ケア 90分': 90,
+            'ファミリーケア 135分': 135,
+            '整体 45分': 45,
         };
 
         let selectedMenuTime = 0;
