--- a/index.html
+++ b/index.html
@@ -2364,6 +2364,60 @@
         body.locked .final-screen * {
             pointer-events: auto !important;
         }
+
+/* 基本スタイル */
+.info-texttop {
+    margin: 20px 0;
+    font-family: "Noto Sans JP", "Roboto", sans-serif;
+    font-size: 14px;
+    color: #333; /* 読みやすい濃い文字色 */
+    background-color: #f8f9fa;
+    line-height: 1.8;
+    text-align: left;
+    word-wrap: break-word;
+    padding: 20px;
+    border-radius: 8px;
+    border: 1px solid #ced4da;
+    max-width: 800px; /* 横幅制限 */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* 軽い影を追加 */
+    overflow-y: auto; /* 長文スクロール対応 */
+}
+
+/* 見出しスタイル */
+.info-texttop h1 {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.info-texttop h2 {
+    font-size: 16px;
+    font-weight: bold;
+    margin-top: 15px;
+    margin-bottom: 8px;
+}
+
+/* 強調テキスト */
+.info-texttop strong {
+    color: #007bff;
+}
+
+/* モバイル向け調整 */
+@media (max-width: 768px) {
+    .info-texttop {
+        font-size: 13px;
+        padding: 15px;
+        max-width: 100%;
+    }
+
+    .info-texttop h1 {
+        font-size: 16px;
+    }
+
+    .info-texttop h2 {
+        font-size: 14px;
+    }
+}
     </style>
 </head>
 
@@ -2379,6 +2433,7 @@
     <div class="container">
         <h1>
         </h1>
+        <div class="info-texttop">こちらは来院予約専用です。<br>オンライン相談や訪問の予約には対応いたしかねます。ご了承ください。</div>
         <!-- 追加するボタン -->
         <div class="repeat-booking-wrapper">
             <button type="button" id="repeatBookingButton" onclick="applyPreviousSelection()">
