--- a/index.html
+++ b/index.html
@@ -2615,12 +2615,12 @@
             </a>
             をお読みください。<br>
             ・初回は予約時間の10分前にお越しくださいませ。<br>
-            妊婦さんは【分娩予定日】<br>
-            産後整体やピラティスでのご予約の方は【出産日】<br>
-            赤ちゃんでのご予約は【生年月日】<br>
+            ・妊婦さんは【分娩予定日】<br>
+            ・産後整体やピラティスでのご予約の方は【出産日】<br>
+            ・赤ちゃんでのご予約は【生年月日】<br>
             それぞれ西暦からご記入ください。<br>
-            ・簡単に【相談内容】と【第何子か】を教えてください。<br>
-            ・当日は、母子手帳と着替えをご持参ください。
+            簡単に【相談内容】と【第何子か】を教えてください。<br>
+            当日は、母子手帳と着替えをご持参ください。
         </div>
         <textarea id="message" rows="4" placeholder="入力してください"></textarea>
 
